test/error/parsing_files/semi_err01.err
File "parsing_files/semi_err01.st", line 1, characters 9-10:
1 | f x y : : := x.
            ^
Error: Syntax error.
Hint: ':' is followed by a type.
